Bug 814576 - Make XMLHttpRequest really set its progress events as trusted. r=smaug, a=lsblakk